--- a/servers.yaml
+++ b/servers.yaml
@@ -37,6 +37,35 @@ ml-rcudb:
   software_files:
     - linuxx64_12201_database.zip
 
+ml-adf12213n1:
+  public_ip:        '10.10.10.30'
+  software_files:
+    - jdk-8u161-linux-x64.tar.gz
+    - fmw_12.2.1.3.0_infrastructure.jar
+    - jce_policy-8.zip
+
+ml-adf12213n2:
+  public_ip:        '10.10.10.31'
+  software_files:
+    - jdk-8u161-linux-x64.tar.gz
+    - fmw_12.2.1.3.0_infrastructure.jar
+    - jce_policy-8.zip
+
+
+ml-adf12214n1:
+  public_ip:        '10.10.10.30'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - jce_policy-8.zip
+
+ml-adf12214n2:
+  public_ip:        '10.10.10.31'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
+    - jce_policy-8.zip
+
 ml-fr12213n1:
   public_ip:        '10.10.10.30'
   software_files:
