--- a/hieradata/nodes/adf12213n1.example.com.yaml
+++ b/hieradata/nodes/adf12213n1.example.com.yaml
@@ -1,10 +1,24 @@
 ---
-
 role: role::fusion::admin_server
 
 wls_profile::domain_name:                                         adf
 wls_profile::install_type:                                        adf
 wls_profile::basic_domain::wls_domain::template_name:             adf
+
+wls_profile::weblogic_version:                                    12213
+wls_profile::weblogic::wls_software::file_name:                   fmw_12.2.1.3.0_infrastructure.jar
+wls_profile::weblogic::fmw_software::file_name:   
+  - fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip
+  - fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip
+
+#
+# Use newer JDK version for this machine
+#
+wls_profile::java_version:                                         8u161
+wls_profile::java_full_version:                                    jdk1.8.0_161
+wls_profile::jdk_home:                                             /usr/java/jdk1.8.0_161
+
+wls_profile::basic_domain::wls_domain::repository_prefix:          'adf12213'
 
 wls_profile::servers:
   adf12213n1.example.com:
@@ -15,13 +29,4 @@ wls_profile::servers:
     machine_name:     adf12213n2.example.com
     listenaddress:    adf12213n2.example.com
     server_arguments: []
-
-wls_profile::basic_domain::wls_domain::repository_prefix:         adf12213
-wls_profile::weblogic_version:                                    12213
-wls_profile::weblogic::wls_software::file_name:                    fmw_12.2.1.3.0_infrastructure.jar
-#
-# Use newer JDK version for this machine
-#
-wls_profile::java_version:                                         8u161
-wls_profile::java_full_version:                                    jdk1.8.0_161
-wls_profile::jdk_home:                                             /usr/java/jdk1.8.0_161
+...
