--- a/hieradata/nodes/adf12214n2.example.com.yaml
+++ b/hieradata/nodes/adf12214n2.example.com.yaml
@@ -5,12 +5,18 @@ wls_profile::domain_name:                                         adf
 wls_profile::install_type:                                        adf
 wls_profile::basic_domain::wls_domain::template_name:             adf
 
-wls_profile::adminserver_address:                                 adf12214n1.example.com
-wls_profile::weblogic::wls_software::file_name:                   fmw_12.2.1.4.0_infrastructure.jar
 wls_profile::weblogic_version:                                    12214
+wls_profile::weblogic::wls_software::file_name:                   fmw_12.2.1.4.0_infrastructure.jar
+wls_profile::weblogic::fmw_software::file_name:
+  - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
+  - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
+
 #
 # Use newer JDK version for this machine
 #
 wls_profile::java_version:                                         8u231
 wls_profile::java_full_version:                                    jdk1.8.0_231
 wls_profile::jdk_home:                                             /usr/java/jdk1.8.0_231
+
+wls_profile::adminserver_address:                                  adf12214n1.example.com
+...
