--- a/hieradata/nodes/rcudb.example.com.yaml
+++ b/hieradata/nodes/rcudb.example.com.yaml
@@ -1,20 +1,9 @@
 ---
-
 role: role::db::rcudb
 
 ora_profile::database::dbname:                                          RCUDB
-ora_profile::database::db_services::domain_name:                          ~
+ora_profile::database::dbdomain:                                        example.com
+ora_profile::database::db_services::domain_name:                         ~
 ora_profile::database::db_patches:                                      skip
-ora_profile::database::db_definition:                                   ora_profile::database::db_definition_template     
-# ------------------------------------------------------------------------------
-#
-#  Settings for database::db_definition
-#
-# ------------------------------------------------------------------------------
-
-ora_profile::database::db_definition_template::db_conf_type:                      SINGLE
-ora_profile::database::db_definition_template::storage_type:                      FS
-ora_profile::database::db_definition_template::data_file_destination:             /u02/oradata
-ora_profile::database::db_definition_template::recovery_area_destination:         /u03/fast_recovery_area
-ora_profile::database::db_definition_template::system_password:                   Welcome01
-ora_profile::database::db_definition_template::sys_password:                      welcome01!
+ora_profile::database::db_definition::sys_password:                     'welcome01!'
+...
