Missing gitci config [ch351]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,8 +60,9 @@ soa_12213_demo_check:
     - cp ~/software/jce_policy-8.zip modules/software/files
   script:
     - vagrant up ml-soa12213n1
+    - vagrant up ml-soa12213n2
   after_script:
-    - vagrant destroy ml-soa12213n1 --force
+    - vagrant destroy ml-soa12213n1 ml-soa12213n2  --force
 
 soa_12214_demo_check:
   extends: .demo_check
@@ -73,8 +74,9 @@ soa_12214_demo_check:
     - cp ~/software/jce_policy-8.zip modules/software/files
   script:
     - vagrant up ml-soa12214n1
+    - vagrant up ml-soa12214n2
   after_script:
-    - vagrant destroy ml-soa12214n1 --force
+    - vagrant destroy ml-soa12214n1 ml-soa12214n2 --force
 
 osb_12213_demo_check:
   extends: .demo_check
@@ -86,8 +88,9 @@ osb_12213_demo_check:
     - cp ~/software/jce_policy-8.zip modules/software/files
   script:
     - vagrant up ml-osb12213n1
+    - vagrant up ml-osb12213n2
   after_script:
-    - vagrant destroy ml-osb12213n1 --force
+    - vagrant destroy ml-osb12213n1 ml-osb12213n2 --force
 
 osb_12214_demo_check:
   extends: .demo_check
@@ -99,8 +102,9 @@ osb_12214_demo_check:
     - cp ~/software/jce_policy-8.zip modules/software/files
   script:
     - vagrant up ml-osb12214n1
+    - vagrant up ml-osb12214n2
   after_script:
-    - vagrant destroy ml-osb12214n1 --force
+    - vagrant destroy ml-osb12214n1 ml-osb12214n2 --force
     
 
 teardown RCU:
