--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ forms_12213_demo_check:
     - cp ~/software/fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip modules/software/files
     - cp ~/software/jce_policy-8.zip modules/software/files
   script:
-    - vagrant up ml-fr12213n1 v
+    - vagrant up ml-fr12213n1
     - vagrant up ml-fr12213n2
   after_script:
     - vagrant destroy ml-fr12213n1 ml-fr12213n2 --force
