Allow more time to nodemanager
Sometimes we run into a timeout. So we give the nodemanager more time

--- a/hieradata/defaults.yaml
+++ b/hieradata/defaults.yaml
@@ -13,4 +13,5 @@ easy_type::generate_password_mode:                                  development
 wls_profile::weblogic_password:                                     'EMRul3z#'
 wls_profile::basic_domain::wls_domain::weblogic_password:           'EMRul3z#'
 wls_profile::node::copy_domain::weblogic_password:                  'EMRul3z#'
+wls_profile::basic_domain::wls_domain::nodemanager_wait:            300
 ...
