--- a/servers.yaml
+++ b/servers.yaml
@@ -23,7 +23,7 @@ pe-defaults:
 # The settings for the Puppet Enterprise Server
 #  
 pe-wlsmaster:
-  public_ip:       '192.168.253.10'
+  public_ip:       '192.168.56.10'
   cpucount:         2
   ram:              3072
   type:             pe-master
@@ -33,19 +33,19 @@ pe-wlsmaster:
 # All masterless nodes
 #
 ml-rcudb:
-  public_ip:        '10.10.10.20'
+  public_ip:        '192.168.56.20'
   software_files:
     - linuxx64_12201_database.zip
 
 ml-adf12213n1:
-  public_ip:        '10.10.10.30'
+  public_ip:        '192.168.56.30'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
     - jce_policy-8.zip
 
 ml-adf12213n2:
-  public_ip:        '10.10.10.31'
+  public_ip:        '192.168.56.31'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -53,21 +53,21 @@ ml-adf12213n2:
 
 
 ml-adf12214n1:
-  public_ip:        '10.10.10.30'
+  public_ip:        '192.168.56.32'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
     - jce_policy-8.zip
 
 ml-adf12214n2:
-  public_ip:        '10.10.10.31'
+  public_ip:        '192.168.56.33'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
     - jce_policy-8.zip
 
 ml-fr12213n1:
-  public_ip:        '10.10.10.30'
+  public_ip:        '192.168.56.34'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip
@@ -76,7 +76,7 @@ ml-fr12213n1:
     - jce_policy-8.zip
 
 ml-fr12213n2:
-  public_ip:        '10.10.10.31'
+  public_ip:        '192.168.56.35'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -86,7 +86,7 @@ ml-fr12213n2:
 
 
 ml-fr12214n1:
-  public_ip:        '10.10.10.30'
+  public_ip:        '192.168.56.36'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
@@ -95,7 +95,7 @@ ml-fr12214n1:
     - jce_policy-8.zip
 
 ml-fr12214n2:
-  public_ip:        '10.10.10.31'
+  public_ip:        '192.168.56.37'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -105,7 +105,7 @@ ml-fr12214n2:
     
 
 ml-soa12213n1:
-  public_ip:        '10.10.10.30'
+  public_ip:        '192.168.56.38'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -113,7 +113,7 @@ ml-soa12213n1:
     - jce_policy-8.zip
 
 ml-soa12213n2:
-  public_ip:        '10.10.10.31'
+  public_ip:        '192.168.56.39'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -121,7 +121,7 @@ ml-soa12213n2:
     - jce_policy-8.zip
 
 ml-soa12214n1:
-  public_ip:        '10.10.10.32'
+  public_ip:        '192.168.56.40'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -129,7 +129,7 @@ ml-soa12214n1:
     - jce_policy-8.zip
 
 ml-soa12214n2:
-  public_ip:        '10.10.10.33'
+  public_ip:        '192.168.56.41'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -137,7 +137,7 @@ ml-soa12214n2:
     - jce_policy-8.zip
 
 ml-osb12213n1:
-  public_ip:        '10.10.10.40'
+  public_ip:        '192.168.56.42'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -145,7 +145,7 @@ ml-osb12213n1:
     - jce_policy-8.zip
 
 ml-osb12213n2:
-  public_ip:        '10.10.10.41'
+  public_ip:        '192.168.56.43'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -153,7 +153,7 @@ ml-osb12213n2:
     - jce_policy-8.zip
 
 ml-osb12214n1:
-  public_ip:        '10.10.10.42'
+  public_ip:        '192.168.56.44'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -161,7 +161,7 @@ ml-osb12214n1:
     - jce_policy-8.zip
 
 ml-osb12214n2:
-  public_ip:        '10.10.10.43'
+  public_ip:        '192.168.56.45'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -171,9 +171,80 @@ ml-osb12214n2:
 #
 # All PE nodes
 #
+pe-rcudb:
+  public_ip:        '192.168.56.20'
+  software_files:
+    - linuxx64_12201_database.zip
+
+pe-adf12213n1:
+  public_ip:        '192.168.56.30'
+  software_files:
+    - jdk-8u161-linux-x64.tar.gz
+    - fmw_12.2.1.3.0_infrastructure.jar
+    - jce_policy-8.zip
+
+pe-adf12213n2:
+  public_ip:        '192.168.56.31'
+  software_files:
+    - jdk-8u161-linux-x64.tar.gz
+    - fmw_12.2.1.3.0_infrastructure.jar
+    - jce_policy-8.zip
+
+
+pe-adf12214n1:
+  public_ip:        '192.168.56.32'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - jce_policy-8.zip
+
+pe-adf12214n2:
+  public_ip:        '192.168.56.33'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
+    - jce_policy-8.zip
+
+pe-fr12213n1:
+  public_ip:        '192.168.56.34'
+  software_files:
+    - jdk-8u161-linux-x64.tar.gz
+    - fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip
+    - fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip
+    - fmw_12.2.1.3.0_infrastructure.jar
+    - jce_policy-8.zip
+
+pe-fr12213n2:
+  public_ip:        '192.168.56.35'
+  software_files:
+    - jdk-8u161-linux-x64.tar.gz
+    - fmw_12.2.1.3.0_infrastructure.jar
+    - fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip
+    - fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip
+    - jce_policy-8.zip
+
+
+pe-fr12214n1:
+  public_ip:        '192.168.56.36'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
+    - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - jce_policy-8.zip
+
+pe-fr12214n2:
+  public_ip:        '192.168.56.37'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
+    - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
+    - jce_policy-8.zip
+    
+
 pe-soa12213n1:
-  public_ip:        '10.10.10.30'
-  cpucount:         2
+  public_ip:        '192.168.56.38'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -181,7 +252,7 @@ pe-soa12213n1:
     - jce_policy-8.zip
 
 pe-soa12213n2:
-  public_ip:        '10.10.10.31'
+  public_ip:        '192.168.56.39'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -189,7 +260,7 @@ pe-soa12213n2:
     - jce_policy-8.zip
 
 pe-soa12214n1:
-  public_ip:        '10.10.10.32'
+  public_ip:        '192.168.56.40'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -197,7 +268,7 @@ pe-soa12214n1:
     - jce_policy-8.zip
 
 pe-soa12214n2:
-  public_ip:        '10.10.10.33'
+  public_ip:        '192.168.56.41'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -205,7 +276,7 @@ pe-soa12214n2:
     - jce_policy-8.zip
 
 pe-osb12213n1:
-  public_ip:        '10.10.10.40'
+  public_ip:        '192.168.56.42'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -213,7 +284,7 @@ pe-osb12213n1:
     - jce_policy-8.zip
 
 pe-osb12213n2:
-  public_ip:        '10.10.10.41'
+  public_ip:        '192.168.56.43'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -221,7 +292,7 @@ pe-osb12213n2:
     - jce_policy-8.zip
 
 pe-osb12214n1:
-  public_ip:        '10.10.10.42'
+  public_ip:        '192.168.56.44'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -229,16 +300,10 @@ pe-osb12214n1:
     - jce_policy-8.zip
 
 pe-osb12214n2:
-  public_ip:        '10.10.10.43'
+  public_ip:        '192.168.56.45'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
     - fmw_12.2.1.4.0_osb.jar.zip
     - jce_policy-8.zip
     
-pe-rcudb:
-  public_ip:        '10.10.10.20'
-  cpucount:         2
-  type:             pe-agent
-  software_files:
-    - linuxx64_12201_database.zip
