--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,20 +19,20 @@ setup RCU:
     refs:
       - master
 
-forms_12213_demo_check:
-  extends: .demo_check
-  before_script:
-    - mkdir -p modules/software/files
-    - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip modules/software/files
-    - cp ~/software/jce_policy-8.zip modules/software/files
-  script:
-    - vagrant up ml-fr12213n1
-    - vagrant up ml-fr12213n2
-  after_script:
-    - vagrant destroy ml-fr12213n1 ml-fr12213n2 --force
+# forms_12213_demo_check:
+#   extends: .demo_check
+#   before_script:
+#     - mkdir -p modules/software/files
+#     - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip modules/software/files
+#     - cp ~/software/jce_policy-8.zip modules/software/files
+#   script:
+#     - vagrant up ml-fr12213n1
+#     - vagrant up ml-fr12213n2
+#   after_script:
+#     - vagrant destroy ml-fr12213n1 ml-fr12213n2 --force
 
 forms_12214_demo_check:
   extends: .demo_check
@@ -48,21 +48,47 @@ forms_12214_demo_check:
     - vagrant up ml-fr12214n2
   after_script:
     - vagrant destroy ml-fr12214n1 ml-fr12214n2 --force
-      
 
-soa_12213_demo_check:
+forms_12219_demo_check:
   extends: .demo_check
   before_script:
     - mkdir -p modules/software/files
-    - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_soa.jar.zip modules/software/files
-    - cp ~/software/jce_policy-8.zip modules/software/files
+    - cp ~/software/jdk-8u231-linux-x64.tar.gz modules/software/files
+    - cp ~/software/fmw_12.2.1.4.0_infrastructure.jar modules/software/files
+    - cp ~/software/fmw_12.2.1.19.0_fr_linux64.bin modules/software/files
   script:
-    - vagrant up ml-soa12213n1
-    - vagrant up ml-soa12213n2
+    - vagrant up ml-fr12219n1
+    - vagrant up ml-fr12219n2
   after_script:
-    - vagrant destroy ml-soa12213n1 ml-soa12213n2  --force
+    - vagrant destroy ml-fr12219n1 ml-fr12219n2 --force
+
+forms_14120_demo_check:
+  extends: .demo_check
+  before_script:
+    - mkdir -p modules/software/files
+    - cp ~/software/jdk-21u05-linux-x64.tar.gz modules/software/files
+    - cp ~/software/fmw_12.2.1.4.0_infrastructure.jar modules/software/files
+    - cp ~/software/fmw_12.2.1.19.0_fr_linux64.bin modules/software/files
+  script:
+    - vagrant up ml-fr14120n1
+    - vagrant up ml-fr14120n2
+  after_script:
+    - vagrant destroy ml-fr14120n1 ml-fr14120n2 --force
+
+
+# soa_12213_demo_check:
+#   extends: .demo_check
+#   before_script:
+#     - mkdir -p modules/software/files
+#     - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_soa.jar.zip modules/software/files
+#     - cp ~/software/jce_policy-8.zip modules/software/files
+#   script:
+#     - vagrant up ml-soa12213n1
+#     - vagrant up ml-soa12213n2
+#   after_script:
+#     - vagrant destroy ml-soa12213n1 ml-soa12213n2  --force
 
 soa_12214_demo_check:
   extends: .demo_check
@@ -78,19 +104,32 @@ soa_12214_demo_check:
   after_script:
     - vagrant destroy ml-soa12214n1 ml-soa12214n2 --force
 
-osb_12213_demo_check:
+soa_14120_demo_check:
   extends: .demo_check
   before_script:
     - mkdir -p modules/software/files
-    - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_osb.jar.zip modules/software/files
-    - cp ~/software/jce_policy-8.zip modules/software/files
+    - cp ~/software/jdk-21u05-linux-x64.tar.gz modules/software/files
+    - cp ~/software/fmw_14.1.2.0.0_infrastructure.jar modules/software/files
+    - cp ~/software/fmw_14.1.2.0.0_soa.jar.zip modules/software/files
   script:
-    - vagrant up ml-osb12213n1
-    - vagrant up ml-osb12213n2
+    - vagrant up ml-soa14120n1
+    - vagrant up ml-soa14120n2
   after_script:
-    - vagrant destroy ml-osb12213n1 ml-osb12213n2 --force
+    - vagrant destroy ml-soa14120n1 ml-soa14120n2 --force
+
+# osb_12213_demo_check:
+#   extends: .demo_check
+#   before_script:
+#     - mkdir -p modules/software/files
+#     - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_osb.jar.zip modules/software/files
+#     - cp ~/software/jce_policy-8.zip modules/software/files
+#   script:
+#     - vagrant up ml-osb12213n1
+#     - vagrant up ml-osb12213n2
+#   after_script:
+#     - vagrant destroy ml-osb12213n1 ml-osb12213n2 --force
 
 osb_12214_demo_check:
   extends: .demo_check
@@ -106,18 +145,31 @@ osb_12214_demo_check:
   after_script:
     - vagrant destroy ml-osb12214n1 ml-osb12214n2 --force
 
-adf_12213_demo_check:
+osb_14120_demo_check:
   extends: .demo_check
   before_script:
     - mkdir -p modules/software/files
-    - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
-    - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
-    - cp ~/software/jce_policy-8.zip modules/software/files
+    - cp ~/software/jdk-21u05-linux-x64.tar.gz modules/software/files
+    - cp ~/software/fmw_14.1.2.0.0_infrastructure.jar modules/software/files
+    - cp ~/software/fmw_14.1.2.0.0_osb.jar.zip modules/software/files
   script:
-    - vagrant up ml-adf12213n1
-    - vagrant up ml-adf12213n2
+    - vagrant up ml-osb14120n1
+    - vagrant up ml-osb14120n2
   after_script:
-    - vagrant destroy ml-adf12213n1 ml-adf12213n2  --force
+    - vagrant destroy ml-osb14120n1 ml-osb14120n2 --force
+
+# adf_12213_demo_check:
+#   extends: .demo_check
+#   before_script:
+#     - mkdir -p modules/software/files
+#     - cp ~/software/jdk-8u161-linux-x64.tar.gz modules/software/files
+#     - cp ~/software/fmw_12.2.1.3.0_infrastructure.jar modules/software/files
+#     - cp ~/software/jce_policy-8.zip modules/software/files
+#   script:
+#     - vagrant up ml-adf12213n1
+#     - vagrant up ml-adf12213n2
+#   after_script:
+#     - vagrant destroy ml-adf12213n1 ml-adf12213n2  --force
 
 adf_12214_demo_check:
   extends: .demo_check
@@ -131,6 +183,18 @@ adf_12214_demo_check:
     - vagrant up ml-adf12214n2
   after_script:
     - vagrant destroy ml-adf12214n1 ml-adf12214n2 --force
+
+adf_14120_demo_check:
+  extends: .demo_check
+  before_script:
+    - mkdir -p modules/software/files
+    - cp ~/software/jdk-21u05-linux-x64.tar.gz modules/software/files
+    - cp ~/software/fmw_14.1.2.0.0_infrastructure.jar modules/software/files
+  script:
+    - vagrant up ml-adf14120n1
+    - vagrant up ml-adf14120n2
+  after_script:
+    - vagrant destroy ml-adf14120n1 ml-adf14120n2 --force
 
 teardown RCU:
   stage: acceptance teardown
