--- a/servers.yaml
+++ b/servers.yaml
@@ -35,22 +35,21 @@ pe-wlsmaster:
 ml-rcudb:
   public_ip:        '192.168.56.20'
   software_files:
-    - linuxx64_12201_database.zip
+    - LINUX.X64_193000_db_home.zip
 
-ml-adf12213n1:
-  public_ip:        '192.168.56.30'
-  software_files:
-    - jdk-8u161-linux-x64.tar.gz
-    - fmw_12.2.1.3.0_infrastructure.jar
-    - jce_policy-8.zip
+# ml-adf12213n1:
+#   public_ip:        '192.168.56.30'
+#   software_files:
+#     - jdk-8u161-linux-x64.tar.gz
+#     - fmw_12.2.1.3.0_infrastructure.jar
+#     - jce_policy-8.zip
 
-ml-adf12213n2:
-  public_ip:        '192.168.56.31'
-  software_files:
-    - jdk-8u161-linux-x64.tar.gz
-    - fmw_12.2.1.3.0_infrastructure.jar
-    - jce_policy-8.zip
-
+# ml-adf12213n2:
+#   public_ip:        '192.168.56.31'
+#   software_files:
+#     - jdk-8u161-linux-x64.tar.gz
+#     - fmw_12.2.1.3.0_infrastructure.jar
+#     - jce_policy-8.zip
 
 ml-adf12214n1:
   public_ip:        '192.168.56.32'
@@ -66,8 +65,22 @@ ml-adf12214n2:
     - fmw_12.2.1.4.0_infrastructure.jar
     - jce_policy-8.zip
 
-ml-fr12213n1:
+ml-adf14120n1:
+  box:              bento/oraclelinux-9
   public_ip:        '192.168.56.34'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+
+ml-adf14120n2:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.35'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+
+ml-fr12213n1:
+  public_ip:        '192.168.56.36'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip
@@ -76,7 +89,7 @@ ml-fr12213n1:
     - jce_policy-8.zip
 
 ml-fr12213n2:
-  public_ip:        '192.168.56.35'
+  public_ip:        '192.168.56.37'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -84,9 +97,8 @@ ml-fr12213n2:
     - fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip
     - jce_policy-8.zip
 
-
 ml-fr12214n1:
-  public_ip:        '192.168.56.36'
+  public_ip:        '192.168.56.38'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
@@ -95,17 +107,46 @@ ml-fr12214n1:
     - jce_policy-8.zip
 
 ml-fr12214n2:
-  public_ip:        '192.168.56.37'
+  public_ip:        '192.168.56.39'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
     - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
     - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
     - jce_policy-8.zip
-    
+
+ml-fr122119n1:
+  public_ip:        '192.168.56.40'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - fmw_12.2.1.19.0_fr_linux64.bin
+
+ml-fr122119n2:
+  public_ip:        '192.168.56.41'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - fmw_12.2.1.19.0_fr_linux64.bin
+
+ml-fr14120n1:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.42'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - V1045121-01.zip
+
+ml-fr14120n2:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.43'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - V1045121-01.zip
 
 ml-soa12213n1:
-  public_ip:        '192.168.56.38'
+  public_ip:        '192.168.56.44'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -113,7 +154,7 @@ ml-soa12213n1:
     - jce_policy-8.zip
 
 ml-soa12213n2:
-  public_ip:        '192.168.56.39'
+  public_ip:        '192.168.56.45'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -121,7 +162,8 @@ ml-soa12213n2:
     - jce_policy-8.zip
 
 ml-soa12214n1:
-  public_ip:        '192.168.56.40'
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.46'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -129,7 +171,7 @@ ml-soa12214n1:
     - jce_policy-8.zip
 
 ml-soa12214n2:
-  public_ip:        '192.168.56.41'
+  public_ip:        '192.168.56.47'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -137,7 +179,7 @@ ml-soa12214n2:
     - jce_policy-8.zip
 
 ml-osb12213n1:
-  public_ip:        '192.168.56.42'
+  public_ip:        '192.168.56.48'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -145,7 +187,7 @@ ml-osb12213n1:
     - jce_policy-8.zip
 
 ml-osb12213n2:
-  public_ip:        '192.168.56.43'
+  public_ip:        '192.168.56.49'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -153,7 +195,7 @@ ml-osb12213n2:
     - jce_policy-8.zip
 
 ml-osb12214n1:
-  public_ip:        '192.168.56.44'
+  public_ip:        '192.168.56.50'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -161,35 +203,42 @@ ml-osb12214n1:
     - jce_policy-8.zip
 
 ml-osb12214n2:
-  public_ip:        '192.168.56.45'
+  public_ip:        '192.168.56.51'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
     - fmw_12.2.1.4.0_osb.jar.zip
     - jce_policy-8.zip
     
-#
-# All PE nodes
-#
-pe-rcudb:
-  public_ip:        '192.168.56.20'
+ml-osb14120n1:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.52'
   software_files:
-    - linuxx64_12201_database.zip
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - fmw_14.1.2.0.0_osb.jar.zip
 
-pe-adf12213n1:
-  public_ip:        '192.168.56.30'
+ml-osb14120n2:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.53'
   software_files:
-    - jdk-8u161-linux-x64.tar.gz
-    - fmw_12.2.1.3.0_infrastructure.jar
-    - jce_policy-8.zip
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - fmw_14.1.2.0.0_osb.jar.zip
 
-pe-adf12213n2:
-  public_ip:        '192.168.56.31'
-  software_files:
-    - jdk-8u161-linux-x64.tar.gz
-    - fmw_12.2.1.3.0_infrastructure.jar
-    - jce_policy-8.zip
+# pe-adf12213n1:
+#   public_ip:        '192.168.56.30'
+#   software_files:
+#     - jdk-8u161-linux-x64.tar.gz
+#     - fmw_12.2.1.3.0_infrastructure.jar
+#     - jce_policy-8.zip
 
+# pe-adf12213n2:
+#   public_ip:        '192.168.56.31'
+#   software_files:
+#     - jdk-8u161-linux-x64.tar.gz
+#     - fmw_12.2.1.3.0_infrastructure.jar
+#     - jce_policy-8.zip
 
 pe-adf12214n1:
   public_ip:        '192.168.56.32'
@@ -205,8 +254,22 @@ pe-adf12214n2:
     - fmw_12.2.1.4.0_infrastructure.jar
     - jce_policy-8.zip
 
-pe-fr12213n1:
+pe-adf14120n1:
+  box:              bento/oraclelinux-9
   public_ip:        '192.168.56.34'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+
+pe-adf14120n2:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.35'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+
+pe-fr12213n1:
+  public_ip:        '192.168.56.36'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_fr_linux64_Disk1_1of2.zip
@@ -215,7 +278,7 @@ pe-fr12213n1:
     - jce_policy-8.zip
 
 pe-fr12213n2:
-  public_ip:        '192.168.56.35'
+  public_ip:        '192.168.56.37'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -223,9 +286,8 @@ pe-fr12213n2:
     - fmw_12.2.1.3.0_fr_linux64_Disk1_2of2.zip
     - jce_policy-8.zip
 
-
 pe-fr12214n1:
-  public_ip:        '192.168.56.36'
+  public_ip:        '192.168.56.38'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
@@ -234,17 +296,46 @@ pe-fr12214n1:
     - jce_policy-8.zip
 
 pe-fr12214n2:
-  public_ip:        '192.168.56.37'
+  public_ip:        '192.168.56.39'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
     - fmw_12.2.1.4.0_fr_linux64_Disk1_1of2.zip
     - fmw_12.2.1.4.0_fr_linux64_Disk1_2of2.zip
     - jce_policy-8.zip
-    
+
+pe-fr122119n1:
+  public_ip:        '192.168.56.40'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - fmw_12.2.1.19.0_fr_linux64.bin
+
+pe-fr122119n2:
+  public_ip:        '192.168.56.41'
+  software_files:
+    - jdk-8u231-linux-x64.tar.gz
+    - fmw_12.2.1.4.0_infrastructure.jar
+    - fmw_12.2.1.19.0_fr_linux64.bin
+
+pe-fr14120n1:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.42'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - V1045121-01.zip
+
+pe-fr14120n2:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.43'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - V1045121-01.zip
 
 pe-soa12213n1:
-  public_ip:        '192.168.56.38'
+  public_ip:        '192.168.56.44'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -252,7 +343,7 @@ pe-soa12213n1:
     - jce_policy-8.zip
 
 pe-soa12213n2:
-  public_ip:        '192.168.56.39'
+  public_ip:        '192.168.56.45'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -260,7 +351,8 @@ pe-soa12213n2:
     - jce_policy-8.zip
 
 pe-soa12214n1:
-  public_ip:        '192.168.56.40'
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.46'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -268,7 +360,7 @@ pe-soa12214n1:
     - jce_policy-8.zip
 
 pe-soa12214n2:
-  public_ip:        '192.168.56.41'
+  public_ip:        '192.168.56.47'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -276,7 +368,7 @@ pe-soa12214n2:
     - jce_policy-8.zip
 
 pe-osb12213n1:
-  public_ip:        '192.168.56.42'
+  public_ip:        '192.168.56.48'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -284,7 +376,7 @@ pe-osb12213n1:
     - jce_policy-8.zip
 
 pe-osb12213n2:
-  public_ip:        '192.168.56.43'
+  public_ip:        '192.168.56.49'
   software_files:
     - jdk-8u161-linux-x64.tar.gz
     - fmw_12.2.1.3.0_infrastructure.jar
@@ -292,7 +384,7 @@ pe-osb12213n2:
     - jce_policy-8.zip
 
 pe-osb12214n1:
-  public_ip:        '192.168.56.44'
+  public_ip:        '192.168.56.50'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
@@ -300,10 +392,26 @@ pe-osb12214n1:
     - jce_policy-8.zip
 
 pe-osb12214n2:
-  public_ip:        '192.168.56.45'
+  public_ip:        '192.168.56.51'
   software_files:
     - jdk-8u231-linux-x64.tar.gz
     - fmw_12.2.1.4.0_infrastructure.jar
     - fmw_12.2.1.4.0_osb.jar.zip
     - jce_policy-8.zip
     
+pe-osb14120n1:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.52'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - fmw_14.1.2.0.0_osb.jar.zip
+
+pe-osb14120n2:
+  box:              bento/oraclelinux-9
+  public_ip:        '192.168.56.53'
+  software_files:
+    - jdk-21u05-linux-x64.tar.gz
+    - fmw_14.1.2.0.0_infrastructure.jar
+    - fmw_14.1.2.0.0_osb.jar.zip
+
