--- a/hieradata/deployment_zones/vagrant.yaml
+++ b/hieradata/deployment_zones/vagrant.yaml
@@ -1,130 +1,1 @@
-profile::base::hosts::list:
-  wlsmaster.example.com:
-    ip: 192.168.56.10
-    host_aliases:
-      - wlsmaster
-      - puppet
-  rcudb.example.com:
-    ip: 192.168.56.20
-    host_aliases:
-      - rcudb
-  adf12213n1.example.com:
-    ip: 192.168.56.30
-    host_aliases:
-      - adf12213n1
-  adf12213n2.example.com:
-    ip: 192.168.56.31
-    host_aliases:
-      - adf12213n2
-  adf12214n1.example.com:
-    ip: 192.168.56.32
-    host_aliases:
-      - adf12214n1
-  adf12214n2.example.com:
-    ip: 192.168.56.33
-    host_aliases:
-      - adf12214n2
-  fr12213n1.example.com:
-    ip: 192.168.56.36
-    host_aliases:
-      - fr12213n1
-  fr12213n2.example.com:
-    ip: 192.168.56.37
-    host_aliases:
-      - fr12213n2
-  fr12214n1.example.com:
-    ip: 192.168.56.38
-    host_aliases:
-      - fr12214n1
-  fr12214n2.example.com:
-    ip: 192.168.56.39
-    host_aliases:
-      - fr12214n2
-  fr122119n1.example.com:
-    ip: 192.168.56.40
-    host_aliases:
-      - fr122119n1
-  fr12219n2.example.com:
-    ip: 192.168.56.41
-    host_aliases:
-      - fr12219n2
-  soa12213n1.example.com:
-    ip: 192.168.56.44
-    host_aliases:
-      - soa12213n1
-  soa12213n2.example.com:
-    ip: 192.168.56.45
-    host_aliases:
-      - soa12213n2
-  soa12214n1.example.com:
-    ip: 192.168.56.46
-    host_aliases:
-      - soa12214n1
-  soa12214n2.example.com:
-    ip: 192.168.56.47
-    host_aliases:
-      - soa12214n2
-  osb12213n1.example.com:
-    ip: 192.168.56.48
-    host_aliases:
-      - osb12213n1
-  osb12213n2.example.com:
-    ip: 192.168.56.49
-    host_aliases:
-      - osb12213n2
-  osb12214n1.example.com:
-    ip: 192.168.56.50
-    host_aliases:
-      - osb12214n1
-  osb12214n2.example.com:
-    ip: 192.168.56.51
-    host_aliases:
-      - osb12214n2
-  soa14120n1.example.com:
-    ip: 192.168.56.54
-    host_aliases:
-      - osb14120n1
-  soa14120n2.example.com:
-    ip: 192.168.56.54
-    host_aliases:
-      - osb14120n2
-  adf14120n1.example.com:
-    ip: 192.168.56.21
-    host_aliases:
-      - adf14120n1
-  adf14120n2.example.com:
-    ip: 192.168.56.22
-    host_aliases:
-      - adf14120n2
-  fr14120n1.example.com:
-    ip: 192.168.56.23
-    host_aliases:
-      - fr14120n1
-  fr14120n2.example.com:
-    ip: 192.168.56.24
-    host_aliases:
-      - fr14120n2
-  fr122119n1.example.com:
-    ip: 192.168.56.25
-    host_aliases:
-      - fr122119n1
-  fr122119n2.example.com:
-    ip: 192.168.56.26
-    host_aliases:
-      - fr122119n2
-  soa14120n1.example.com:
-    ip: 192.168.56.27
-    host_aliases:
-      - soa14120n1
-  soa14120n2.example.com:
-    ip: 192.168.56.28
-    host_aliases:
-      - soa14120n2
-  osb14120n1.example.com:
-    ip: 192.168.56.29
-    host_aliases:
-      - osb14120n1
-  osb14120n2.example.com:
-    ip: 192.168.56.30
-    host_aliases:
-      - osb14120n2
+profile::base::hosts::list: {}
