[quality] Destroy boxes before run

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,8 @@ forms_12214_demo_check:
   extends: .demo_check
   variables:
     server:  ml-fr12214n1
+  before_script:
+    - vagrant destroy ml-fr12214n1 ml-fr12214n2 --force || true
   script:
     - vagrant up ml-fr12214n1
     - vagrant up ml-fr12214n2
@@ -55,6 +57,8 @@ forms_122119_demo_check:
   extends: .demo_check
   variables:
     server:  ml-fr122119n1
+  before_script:
+    - vagrant destroy ml-fr122119n1 ml-fr122119n2 --force || true
   script:
     - vagrant up ml-fr122119n1
     - vagrant up ml-fr122119n2
@@ -65,6 +69,8 @@ forms_14120_demo_check:
   extends: .demo_check
   variables:
     server:  ml-fr14120n1
+  before_script:
+    - vagrant destroy ml-fr14120n1 ml-fr14120n2 --force || true
   script:
     - vagrant up ml-fr14120n1
     - vagrant up ml-fr14120n2
@@ -89,6 +95,8 @@ soa_12214_demo_check:
   extends: .demo_check
   variables:
     server:  ml-soa12214n1
+  before_script:
+    - vagrant destroy ml-soa12214n1 ml-soa12214n2 --force || true
   script:
     - vagrant up ml-soa12214n1
     - vagrant up ml-soa12214n2
@@ -99,6 +107,8 @@ soa_14120_demo_check:
   extends: .demo_check
   variables:
     server:  ml-soa14120n1
+  before_script:
+    - vagrant destroy ml-soa14120n1 ml-soa14120n2 --force || true
   script:
     - vagrant up ml-soa14120n1
     - vagrant up ml-soa14120n2
@@ -122,6 +132,8 @@ osb_12214_demo_check:
   extends: .demo_check
   variables:
     server:  ml-osb12214n1
+  before_script:
+    - vagrant destroy ml-osb12214n1 ml-osb12214n2 --force || true
   script:
     - vagrant up ml-osb12214n1
     - vagrant up ml-osb12214n2
@@ -132,6 +144,8 @@ osb_14120_demo_check:
   extends: .demo_check
   variables:
     server:  ml-osb14120n1
+  before_script:
+    - vagrant destroy ml-osb14120n1 ml-osb14120n2 --force || true
   script:
     - vagrant up ml-osb14120n1
     - vagrant up ml-osb14120n2
@@ -154,6 +168,8 @@ adf_12214_demo_check:
   extends: .demo_check
   variables:
     server:  ml-adf12214n1
+  before_script:
+    - vagrant destroy ml-adf12214n1 ml-adf12214n2 --force || true
   script:
     - vagrant up ml-adf12214n1
     - vagrant up ml-adf12214n2
@@ -164,6 +180,8 @@ adf_14120_demo_check:
   extends: .demo_check
   variables:
     server:  ml-adf14120n1
+  before_script:
+    - vagrant destroy ml-adf14120n1 ml-adf14120n2 --force || true
   script:
     - vagrant up ml-adf14120n1
     - vagrant up ml-adf14120n2
@@ -179,4 +197,3 @@ teardown RCU:
   only:
     refs:
       - master
-    
